--- a/forms/new_remote_window.ui
+++ b/forms/new_remote_window.ui
@@ -33,7 +33,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>9</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab_ftp">
       <attribute name="title">
@@ -383,7 +383,7 @@
        <item>
         <widget class="QLabel" name="label_3">
          <property name="text">
-          <string>The browser will open</string>
+          <string>By pressing the OK button your browser will open and you will be needed to authenticate in Google Drive</string>
          </property>
         </widget>
        </item>
@@ -410,7 +410,7 @@
        <item>
         <widget class="QLabel" name="label_6">
          <property name="text">
-          <string>The browser will open</string>
+          <string>By pressing the OK button your browser will open and you will be needed to authenticate in Yandex Disk</string>
          </property>
         </widget>
        </item>
@@ -437,12 +437,94 @@
        <item>
         <widget class="QLabel" name="label_11">
          <property name="text">
-          <string>The browser will open</string>
+          <string>By pressing the OK button your browser will open and you will be needed to authenticate in Microsoft OneDrive</string>
          </property>
         </widget>
        </item>
        <item>
         <spacer name="verticalSpacer_6">
+         <property name="orientation">
+          <enum>Qt::Orientation::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tab_mailru">
+      <attribute name="title">
+       <string>Mail.ru Cloud</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_25">
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <item>
+          <layout class="QVBoxLayout" name="verticalLayout_23">
+           <item>
+            <widget class="QLabel" name="label_24">
+             <property name="text">
+              <string>Login</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="lineEdit_mailru_login"/>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QVBoxLayout" name="verticalLayout_24">
+           <item>
+            <widget class="QLabel" name="label_25">
+             <property name="text">
+              <string>Password</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="lineEdit_mailru_password">
+             <property name="echoMode">
+              <enum>QLineEdit::EchoMode::Password</enum>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_26">
+         <property name="text">
+          <string>To add Mail.ru you will need to generate a password for external applications in the Mail.ru web control panel. Select &quot;Full access to Mail. Cloud, Calendar (All Protocols)&quot;. You can generate the password in this url</string>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_27">
+         <property name="text">
+          <string>&lt;a href=&quot;https://id.mail.ru/security&quot;&gt;https://id.mail.ru/security&lt;/a&gt;</string>
+         </property>
+         <property name="textFormat">
+          <enum>Qt::TextFormat::RichText</enum>
+         </property>
+         <property name="openExternalLinks">
+          <bool>true</bool>
+         </property>
+         <property name="textInteractionFlags">
+          <set>Qt::TextInteractionFlag::TextBrowserInteraction</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="verticalSpacer_10">
          <property name="orientation">
           <enum>Qt::Orientation::Vertical</enum>
          </property>
@@ -567,8 +649,8 @@
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>-11</y>
-            <width>584</width>
+            <y>0</y>
+            <width>203</width>
             <height>338</height>
            </rect>
           </property>
@@ -604,7 +686,7 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>582</width>
+                <width>350</width>
                 <height>144</height>
                </rect>
               </property>
