--- a/forms/main_window.ui
+++ b/forms/main_window.ui
@@ -18,6 +18,9 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
@@ -209,6 +212,9 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="contextMenuPolicy">
+         <enum>Qt::ContextMenuPolicy::CustomContextMenu</enum>
+        </property>
         <property name="rootIsDecorated">
          <bool>false</bool>
         </property>
@@ -229,6 +235,9 @@
       </item>
       <item>
        <widget class="QTreeWidget" name="tree_files">
+        <property name="contextMenuPolicy">
+         <enum>Qt::ContextMenuPolicy::CustomContextMenu</enum>
+        </property>
         <property name="dragEnabled">
          <bool>true</bool>
         </property>
@@ -337,6 +346,9 @@
      </property>
      <item>
       <widget class="QTreeWidget" name="tasks">
+       <property name="contextMenuPolicy">
+        <enum>Qt::ContextMenuPolicy::CustomContextMenu</enum>
+       </property>
        <property name="rootIsDecorated">
         <bool>false</bool>
        </property>
